added mocked kyc related logic in start mining
